# epubedit

./: LICENSE  README.md  book.epub  pyproject.toml  test.py
src/epubedit/: __init__.py  epubedit.py
tests/: test.py  test2.py  xml.text
